Support atom-text-editor shadow DOM

--- a/index.less
+++ b/index.less
@@ -1,11 +1,11 @@
 @import "syntax-variables";
 
-.editor-colors {
+.editor-colors, :host {
   background-color: @syntax-background-color;
   color: @syntax-text-color;
 }
 
-.editor {
+.editor, :host {
   background-color: @syntax-background-color;
   color: @syntax-text-color;
 
@@ -309,6 +309,8 @@
   }
 }
 
-.editor.mini .scroll-view {
-  padding-left: 1px;
+.editor.mini, :host([mini]) {
+  .scroll-view {
+    padding-left: 1px;
+  }
 }
