--- a/index.less
+++ b/index.less
@@ -1,11 +1,6 @@
 @import "syntax-variables";
 
-.editor-colors, :host {
-  background-color: @syntax-background-color;
-  color: @syntax-text-color;
-}
-
-.editor, :host {
+atom-text-editor, :host {
   background-color: @syntax-background-color;
   color: @syntax-text-color;
 
