Add language variables

--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -30,3 +30,17 @@
 @syntax-color-added: @green;
 @syntax-color-modified: @orange;
 @syntax-color-removed: @red;
+
+// For language entity colors
+@syntax-color-variable: @red;
+@syntax-color-constant: @orange;
+@syntax-color-property: @syntax-text-color;
+@syntax-color-value: @green;
+@syntax-color-function: @blue;
+@syntax-color-method: @blue;
+@syntax-color-class: @light-orange;
+@syntax-color-keyword: @purple;
+@syntax-color-tag: @red;
+@syntax-color-attribute: @orange;
+@syntax-color-import: @syntax-color-keyword;
+@syntax-color-snippet: @green;
