--- a/index.less
+++ b/index.less
@@ -72,7 +72,7 @@ atom-text-editor, :host {
 }
 
 .keyword {
-  color: @purple;
+  color: @syntax-color-keyword;
 
   &.control {
     color: @purple;
@@ -83,7 +83,7 @@ atom-text-editor, :host {
   }
 
   &.other.special-method {
-    color: @blue;
+    color: @syntax-color-method;
   }
 
   &.other.unit {
@@ -96,7 +96,7 @@ atom-text-editor, :host {
 }
 
 .constant {
-  color: @orange;
+  color: @syntax-color-constant;
 
   &.character.escape {
     color: @cyan;
@@ -116,7 +116,7 @@ atom-text-editor, :host {
 }
 
 .variable {
-  color: @red;
+  color: @syntax-color-variable;
 
   &.interpolation {
     color: @dark-red;
@@ -178,25 +178,25 @@ atom-text-editor, :host {
 
 .support {
   &.class {
-    color: @light-orange;
+    color: @syntax-color-class;
   }
 
   &.function  {
     color: @cyan;
 
     &.any-method {
-      color: @blue;
+      color: @syntax-color-method;
     }
   }
 }
 
 .entity {
   &.name.function {
-    color: @blue;
+    color: @syntax-color-function;
   }
 
   &.name.class, &.name.type.class {
-    color: @light-orange;
+    color: @syntax-color-class;
   }
 
   &.name.section {
@@ -204,11 +204,11 @@ atom-text-editor, :host {
   }
 
   &.name.tag {
-    color: @red;
+    color: @syntax-color-tag;
   }
 
   &.other.attribute-name {
-    color: @orange;
+    color: @syntax-color-attribute;
 
     &.id {
       color: @blue;
@@ -218,7 +218,7 @@ atom-text-editor, :host {
 
 .meta {
   &.class {
-    color: @light-orange;
+    color: @syntax-color-class;
   }
 
   &.link {
