--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -20,8 +20,8 @@
 @syntax-result-marker-color-selected: @white;
 
 // Gutter colors
-@syntax-gutter-text-color: @very-light-gray;
-@syntax-gutter-text-color-selected: @light-gray;
+@syntax-gutter-text-color: @gray;
+@syntax-gutter-text-color-selected: @very-dark-gray;
 @syntax-gutter-background-color: @white;
 @syntax-gutter-background-color-selected: @very-light-gray;
 
