--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -1,46 +1,45 @@
 @import "colors";
 
-// This defines all syntax variables that syntax themes must implement when they
-// include a syntax-variables.less file.
+// Official Syntax Variables
 
 // General colors
-@syntax-text-color: darken(@black, 5%);
-@syntax-cursor-color: @black;
-@syntax-selection-color: lighten(@light-gray, 10%);
-@syntax-selection-flash-color: @very-light-gray;
-@syntax-background-color: @white;
+@syntax-text-color:            @black;
+@syntax-cursor-color:          @black;
+@syntax-selection-color:       @almost-white;
+@syntax-selection-flash-color: @very-dark-gray;
+@syntax-background-color:      @white;
 
 // Guide colors
-@syntax-wrap-guide-color: @very-light-gray;
-@syntax-indent-guide-color: @very-light-gray;
-@syntax-invisible-character-color: @light-gray;
+@syntax-wrap-guide-color:          @almost-white;
+@syntax-indent-guide-color:        @almost-white;
+@syntax-invisible-character-color: @very-light-gray;
 
 // For find and replace markers
-@syntax-result-marker-color: @light-gray;
-@syntax-result-marker-color-selected: @white;
+@syntax-result-marker-color:          @light-gray;
+@syntax-result-marker-color-selected: @very-light-gray;
 
 // Gutter colors
-@syntax-gutter-text-color: @gray;
-@syntax-gutter-text-color-selected: @very-dark-gray;
-@syntax-gutter-background-color: @white;
-@syntax-gutter-background-color-selected: @very-light-gray;
+@syntax-gutter-text-color:                @light-gray;
+@syntax-gutter-text-color-selected:       @dark-gray;
+@syntax-gutter-background-color:          @syntax-background-color;
+@syntax-gutter-background-color-selected: @syntax-selection-color;
 
 // For git diff info. i.e. in the gutter
-@syntax-color-renamed: @blue;
-@syntax-color-added: @green;
+@syntax-color-renamed:  @blue;
+@syntax-color-added:    @green;
 @syntax-color-modified: @orange;
-@syntax-color-removed: @red;
+@syntax-color-removed:  @red;
 
 // For language entity colors
-@syntax-color-variable: @red;
-@syntax-color-constant: @orange;
-@syntax-color-property: @syntax-text-color;
-@syntax-color-value: @green;
-@syntax-color-function: @blue;
-@syntax-color-method: @blue;
-@syntax-color-class: @light-orange;
-@syntax-color-keyword: @purple;
-@syntax-color-tag: @red;
+@syntax-color-variable:  @red;
+@syntax-color-constant:  @orange;
+@syntax-color-property:  @syntax-text-color;
+@syntax-color-value:     @green;
+@syntax-color-function:  @blue;
+@syntax-color-method:    @blue;
+@syntax-color-class:     @yellow;
+@syntax-color-keyword:   @purple;
+@syntax-color-tag:       @red;
 @syntax-color-attribute: @orange;
-@syntax-color-import: @syntax-color-keyword;
-@syntax-color-snippet: @green;
+@syntax-color-import:    @purple;
+@syntax-color-snippet:   @green;
