Correct comment color

--- a/styles/language.less
+++ b/styles/language.less
@@ -1,7 +1,7 @@
 @import "syntax-variables";
 
 .comment {
-  color: @light-gray;
+  color: @gray;
 }
 
 .entity {
@@ -95,10 +95,6 @@
 
 .punctuation {
   &.definition {
-    &.comment {
-      color: @light-gray;
-    }
-
     &.parameters,
     &.array {
       color: @syntax-text-color;
