--- a/index.less
+++ b/index.less
@@ -1,5 +1,9 @@
 
 // Base16 Tomorrow light
 
-@import 'styles/editor';
-@import 'styles/language';
+@import (reference) "styles/syntax-variables";
+
+@import 'editor';
+@import 'language';
+
+@import 'languages/json';
