:memo: Add editor comments

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -1,6 +1,8 @@
-@import "syntax-variables";
 
-atom-text-editor, :host {
+// Editor styles (background, gutter, guides)
+
+atom-text-editor, // <- remove when Shadow DOM can't be disabled
+:host {
   background-color: @syntax-background-color;
   color: @syntax-text-color;
 
