Make all the guide colors the same
So they can be seen when selecting.

Ref: https://github.com/atom/base16-tomorrow-dark-theme/issues/28

--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -10,8 +10,8 @@
 @syntax-background-color:      @white;
 
 // Guide colors
-@syntax-wrap-guide-color:          @almost-white;
-@syntax-indent-guide-color:        @almost-white;
+@syntax-wrap-guide-color:          @very-light-gray;
+@syntax-indent-guide-color:        @very-light-gray;
 @syntax-invisible-character-color: @very-light-gray;
 
 // For find and replace markers
