Improve coloring inside the classes and methods.
Fixed the coloring inside the methods, classes and inner classes.
Added coloring for the keyword operator in C#.

# Conflicts:
#	index.less

--- a/index.less
+++ b/index.less
@@ -1,9 +1,10 @@
 
-// Base16 Tomorrow light
+// Base16 Tomorrow Light
 
 @import (reference) "styles/syntax-variables";
 
 @import 'editor';
 @import 'language';
 
+@import 'languages/cs';
 @import 'languages/json';
