--- a/index.less
+++ b/index.less
@@ -4,7 +4,7 @@
 @import (reference) "styles/syntax-variables";
 
 @import 'editor';
-@import 'language';
 
-@import 'languages/cs';
-@import 'languages/json';
+@import 'syntax/_base';
+@import 'syntax/cs';
+@import 'syntax/json';
